# r2

./: .gitignore  .prettierignore  CLAUDE.md  README.md  SYNC_STRUCTURE.md  TODOS.md  next.config.ts  package.json  publish.sh  tsconfig.json
.cargo/: config.toml
.claude/skills/: r2-release.skill
.claude/skills/r2-release/: SKILL.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
docs/engineering/: baseline.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/range-dl/: Cargo.toml
src-tauri/crates/range-dl/src/: chunk.rs  engine.rs  lib.rs  meta.rs  types.rs
src-tauri/crates/range-dl/tests/: download_tests.rs
src-tauri/icons/: generate-icons.sh
src-tauri/src/: account.rs  cache.rs  db.rs  lib.rs  main.rs  r2.rs  transfer_progress.rs  upload.rs
src-tauri/src/commands/: aws_commands.rs  batch_move.rs  cache_events.rs  delete_cache.rs  file_cache.rs  lazy_sync.rs  minio_commands.rs  mod.rs  move_cache.rs  r2_commands.rs  rustfs_commands.rs  upload_cache.rs
src-tauri/src/db/: accounts.rs  app_state.rs  aws_accounts.rs  aws_buckets.rs  buckets.rs  dir_tree.rs  downloads.rs  file_cache.rs  minio_accounts.rs  minio_buckets.rs  mod.rs  move_sessions.rs  prefix_sync.rs  rustfs_accounts.rs  rustfs_buckets.rs  sessions.rs  tokens.rs
src-tauri/src/download/: commands.rs  mod.rs  types.rs  worker.rs
src-tauri/src/move_transfer/: commands.rs  config.rs  finishing.rs  mod.rs  state.rs  stream.rs  types.rs  worker.rs
src-tauri/src/providers/: mod.rs  rustfs.rs  s3_client.rs
src-tauri/src/providers/aws/: list.rs  mod.rs  objects.rs  presigned.rs  types.rs  upload.rs
src-tauri/src/providers/minio/: list.rs  mod.rs  objects.rs  presigned.rs  types.rs  upload.rs
src-tauri/src/r2/: commands.rs  list.rs  mod.rs  objects.rs  presigned.rs  types.rs  upload.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/components/: AccessKeyModal.tsx  AccountEditModal.tsx  AccountSidebar.tsx  AccountSidebarRows.tsx  AccountTransferModal.tsx  BatchDeleteModal.tsx  BatchMoveModal.tsx  CommandPalette.tsx  ConfigModal.tsx  Crumbs.tsx  DownloadTaskItem.tsx  DownloadTaskModal.tsx  EmptyState.tsx  FileContextMenu.tsx  FileGridTile.tsx  FileGridView.tsx  FileListRow.tsx  FileListView.tsx  Inspector.tsx  (+23 more)
(+61 files in other folders)
