[package]
name = "r2"
version = "0.1.55"
description = "A desktop application for managing Cloudflare R2 storage buckets."
authors = ["Peilin Wu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "r2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Upload dependencies
reqwest = { version = "0.13.2", features = ["stream", "multipart"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
urlencoding = "2"
lazy_static = "1.4"
turso = "0.5.0-pre"
log = "0.4"
tauri-plugin-video-thumbnail = { git = "https://github.com/dickwu/tauri-plugin-video-thumbnail" }
# AWS S3 SDK for R2 operations
aws-config = "1.8"
aws-sdk-s3 = { version = "1.122.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
futures-util = "0.3"
