[package]
name = "range-dl"
version = "0.1.0"
edition = "2021"
description = "Multi-threaded HTTP download engine with Range-based parallel chunk acceleration"

[dependencies]
reqwest = { version = "0.13", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt", "time", "macros"] }
tokio-util = "0.7"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
